--- a/gz_video_recorder/RemoteVideoRecorder.qrc
+++ b/gz_video_recorder/RemoteVideoRecorder.qrc
@@ -1,6 +1,10 @@
 <!DOCTYPE RCC><RCC version="1.0">
+<qresource prefix="gz-video-recorder/">
+  <file>gz-video-recorder.qml</file>
+  <file>video_camera.svg</file>
+</qresource>
 <qresource prefix="RemoteVideoRecorder/">
-  <file>RemoteVideoRecorder.qml</file>
+  <file>gz-video-recorder.qml</file>
   <file>video_camera.svg</file>
 </qresource>
 </RCC>
